Fixed hacky spacing between videos

--- a/website/src/css/components/_Vimeo.scss
+++ b/website/src/css/components/_Vimeo.scss
@@ -1,4 +1,5 @@
 .vimeo-embed {
+    margin: 2rem 0;
     padding:56.25% 0 0 0;
     position:relative;
     border: 1px solid #0FADEF;
